--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,12 @@ CHANGELOG
 =========
 
 0.1.0 (2014-01-22)
-+ start project
+- start project
 
 0.1.1 (2014-07-17)
-* add params to request body for DELETE method
+- add params to request body for DELETE method
+
+1.0.0 (2014-12-11)
+- composer integration (special thanks to @k3nn7)
+  - impose namespace
+  - add license
