--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,3 +17,6 @@ CHANGELOG
 
 1.0.2 (2014-12-29)
 - fix deprecated warning of using @ prefix to upload file
+
+1.0.3 (2014-12-30)
+- add custom http header
