credit to contributors

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -26,7 +26,8 @@ CHANGELOG
 - specify namespace
 
 1.0.5 (2015-06-09)
-- apply PSR-4 and revise coding style
-- add file format checking
-- setup phpunit
+- remove hardcoded version (thanks to @skolodyazhnyy)
+- apply PSR-4 and revise coding style (thanks to @BunnyHolder)
+- add file format checking (thanks to @BunnyHolder)
+- setup phpunit (thanks to @BernardoSilva)
 - activate TravisCI
